favicon. playing drum sound on button click.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
+  <link rel="icon" href="./images/favicon-drum.ico">
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <script src="./js/index.js" defer></script>
+  <script src="./js/app.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Drum Industries Ltd.
   </footer>
 </body>
 
