sass/sassy.scss

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <title>Drum Kit</title>
   <link rel="icon" href="./images/favicon-drum.ico">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/sassy.min.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <script src="./js/app.js" defer></script>
 </head>
 
 <body>
   <h1 id="title">Drum 🥁 Kit</h1>
-  <div class="set">
+  <div class="drumsetAlign">
     <button type="button" class="w drum">w</button>
     <button type="button" class="a drum">a</button>
     <button type="button" class="s drum">s</button>
