--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Drum Kit</title>
   <link rel="icon" href="./images/favicon-drum.ico">
-  <link rel="stylesheet" href="./css/sassy.min.css">
+  <link rel="stylesheet" href="./css/sassy.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <script src="./js/app.js" defer></script>
 </head>
