using flexbox to align drums. tidy up sass

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
   <h1 id="title">Drum 🥁 Kit</h1>
-  <div class="drumsetAlign">
-    <button type="button" class="w drum">w</button>
-    <button type="button" class="a drum">a</button>
-    <button type="button" class="s drum">s</button>
-    <button type="button" class="d drum">d</button>
-    <button type="button" class="j drum">j</button>
-    <button type="button" class="k drum">k</button>
-    <button type="button" class="l drum">l</button>
+  <div class="flex-container">
+    <div class="w drum">w</div>
+    <div class="a drum">a</div>
+    <div class="s drum">s</div>
+    <div class="d drum">d</div>
+    <div class="j drum">j</div>
+    <div class="k drum">k</div>
+    <div class="l drum">l</div>
   </div>
 
   <footer>
