improving drum icons. changing default font

--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Drum Kit</title>
+  <title>Drum Set</title>
   <link rel="icon" href="./images/favicon-drum.ico">
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <script src="./js/app.js" defer></script>
 </head>
 
 <body>
-  <h1 id="title">Drum 🥁 Kit</h1>
+  <h1 id="title">Drum Set</h1>
   <div class="flex-container">
     <div class="w drum">w</div>
     <div class="a drum">a</div>
@@ -22,9 +21,6 @@
     <div class="l drum">l</div>
   </div>
 
-  <footer>
-    Drum Industries Ltd.
-  </footer>
 </body>
 
 </html>
