swapping w key for f key

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <h1 id="title">Drum Set</h1>
   <div class="flex-container">
-    <div class="w drum">w</div>
     <div class="a drum">a</div>
     <div class="s drum">s</div>
     <div class="d drum">d</div>
+    <div class="f drum">f</div>
     <div class="j drum">j</div>
     <div class="k drum">k</div>
     <div class="l drum">l</div>
