--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- Drum button divs in a flexbox container div. -->
   <h1 id="title">Drum Set</h1>
   <div class="flex-container">
     <div class="a drum">a</div>
