--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="user-scalable=0">
   <title>Drum Set</title>
   <link rel="icon" href="./images/favicon-drum.ico">
   <link rel="stylesheet" href="./css/style.css">
